--- a/views/partials/headerhome.ejs
+++ b/views/partials/headerhome.ejs
@@ -11,7 +11,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
     crossorigin="anonymous"
   />
-  <!--   <link rel="stylesheet" href="../stylesheets/stylehome.css" /> -->
+    <link rel="stylesheet" href="../stylesheets/stylehome.css" />
   <link rel="icon" href="/images/logo.png" type="img" />
   <title>Welcome to MOOD</title>
 </head>
