--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,25 +31,45 @@ body {
   -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
-/* 
-a {
-  color: #00b7ff;
+
+
+#btn-settings {
+  font-weight: bold ; letter-spacing: 0.1rem;
 }
 
-h1 {
-  display: block;
-  text-align: center;
-  font-size: 25px;
-  color: white;
+
+.borderred{background-color: #eb1c1c;}
+.borderblue{background-color: rgb(3, 81, 182);}
+.borderyellow{background-color: #fcce00;}
+.bordergreen{background-color: #228b03;}
+
+
+.inputset{
+border-radius: 5px;  
+margin-top: 5px;
 }
 
-h2 {
-  display: block;
-  text-align: center;
-  font-size: 20px;
-  color: white;
+[data-tag="Answers"]{
+display: flex;
+/* display: none; */
 }
-*/
+
+[data-tag="truefalse"]{
+  display: none;
+  /* display: flex; */
+}
+
+.imgarea{
+ justify-content: center;
+display: inline-flex;
+}
+
+.ana{
+  background-color: rgb(238, 238, 238);
+  padding: 5px 0px 30px 0px;
+
+}
+
 #question-field {
   border-style: groove;
   border-width: 1px;
