--- a/views/player/playergameblock.ejs
+++ b/views/player/playergameblock.ejs
@@ -1,201 +1,203 @@
 <!DOCTYPE html>
 <html>
-  <%- include('../partials/header', {title}); %>
+<%- include('../partials/header', {title}); %>
+
   <body>
-        <!-- Answer Choices -->
-        <ul class="row" style="margin-top: 30px;" data-tag="Answers">
-          <li class="col-lg-6 row py-2 " data-question-id="" data-id="">
-              <div class="col-12 align-self-center ">
-                  <div class=" input-group px-2">
-                      <i> <img src="/images/kirmizi.png" alt=""></i>
-                      <input data-tag="text" class=" form-control form-control-lg" type="text" value="Answer-1"
-                          readonly
-                          style="background-color: #eb1c1c; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-                  </div>
-              </div>
-          </li>
-          <li class="col-lg-6 row  py-2 " data-question-id="" data-id="">
-              <div class="col-12 align-self-center ">
-                  <div class="input-group  px-2">
-                      <i><img src="/images/mavi.png" alt=""></i>
-                      <input data-tag="text" class=" form-control form-control-lg" type="text" value="Answer-2"
-                          readonly
-                          style="background-color: rgb(3, 81, 182); color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-                  </div>
-              </div>
-          </li>
-          <li class="col-lg-6 row py-2 " data-question-id="" data-id="">
-              <div class="col-12 align-self-center">
-                  <div class=" input-group px-2 ">
-                      <i><img src="/images/sari.png" alt=""></i>
-                      <input data-tag="text" class=" form-control form-control-lg" type="text" value="Answer-3"
-                          readonly
-                          style="background-color: #eec71a;; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-                  </div>
-              </div>
-          </li>
-          <li class="col-lg-6 row py-2  ">
-              <div class="col-12 align-self-center">
-                  <div class=" input-group px-2">
-                      <i><img src="/images/yesil.png" alt=""></i>
-                      <input data-tag="text" class=" form-control form-control-lg" type="text" value="Answer-4"
-                          readonly
-                          style="background-color: #228b03; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-                  </div>
-              </div>
-              </div>
-          </li>
-      </ul>
-      <ul class="row" style="margin-top: 50px;" data-tag="truefalse">
-          <li class="col-6  row  ">
-              <div class="col-12 align-self-center">
-                  <div class=" input-group px-2">
-                      <i><img src="/images/yesil.png" alt=""></i>
-                      <input data-tag="text" class=" form-control form-control-lg" type="text" value="True" readonly
-                          style="background-color: #228b03; color: white; font-weight: 500; border: none;">
-                  </div>
-              </div>
-          </li>
-          <li class="col-6 row " data-question-id="" data-id="">
-              <div class="col-12 align-self-center ">
-                  <div class=" input-group px-2">
-                      <i> <img src="/images/kirmizi.png" alt=""></i>
-                      <input data-tag="text" class=" form-control form-control-lg" type="text" value="False" readonly
-                          style="background-color: #eb1c1c; color: white; font-weight: 500; border: none;">
-                  </div>
-              </div>
-          </li>
-      </ul>
-
-<!-- OLD STUFF -->
-<!-- OLD STUFF -->
-
-
-    <div class="container"><div id="stats">
-      <h4 id="nameText">Name:</h4>
-      <h4 id="scoreText">Score:</h4>
-      <h4 id="rankText"></h4>
-    </div>
+    <!-- Answer Choices -->
     <h2 id="message"></h2>
-    <button onclick="answerSubmitted(1)" id="answer1" class="button">1</button>
-    <button onclick="answerSubmitted(2)" id="answer2" class="button">2</button>
-    <br />
-    <button onclick="answerSubmitted(3)" id="answer3" class="button">3</button>
-    <button onclick="answerSubmitted(4)" id="answer4" class="button">4</button></div>
+    <ul class="row" style="margin-top: 30px;" data-tag="Answers" id="ansContainer">
+      <li class="col-lg-6 row py-2 " data-question-id="" data-id="" >
+        <div class="col-12 align-self-center ">
+          <div class=" input-group px-2">
+            <i> <img src="/images/kirmizi.png" alt=""></i>
+            <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-1" id="answer1"
+              onclick="answerSubmitted(1)" readonly
+              style="background-color: #eb1c1c; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-6 row  py-2 " data-question-id="" data-id="" >
+        <div class="col-12 align-self-center ">
+          <div class="input-group  px-2">
+            <i><img src="/images/mavi.png" alt=""></i>
+            <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-2" id="answer2"
+              onclick="answerSubmitted(2)" readonly
+              style="background-color: rgb(3, 81, 182); color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-6 row py-2 " data-question-id="" data-id="" >
+        <div class="col-12 align-self-center">
+          <div class=" input-group px-2 ">
+            <i><img src="/images/sari.png" alt=""></i>
+            <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-3" id="answer3"
+              onclick="answerSubmitted(3)" readonly
+              style="background-color: #eec71a;; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-6 row py-2  " >
+        <div class="col-12 align-self-center">
+          <div class=" input-group px-2">
+            <i><img src="/images/yesil.png" alt=""></i>
+            <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-4" id="answer4"
+              onclick="answerSubmitted(4)" readonly
+              style="background-color: #228b03; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+        </div>
+      </li>
+    </ul>
+    <ul class="row" style="margin-top: 50px;" data-tag="truefalse">
+      <li class="col-6  row  " id="ansContainer">
+        <div class="col-12 align-self-center">
+          <div class="input-group px-2">
+            <i><img src="/images/yesil.png" alt=""></i>
+            <input data-tag="text" class=" form-control form-control-lg" type="text" value="True" readonly
+              style="background-color: #228b03; color: white; font-weight: 500; border: none;">
+          </div>
+        </div>
+      </li>
+      <li class="col-6 row " data-question-id="" data-id="" id="ansContainer">
+        <div class="col-12 align-self-center ">
+          <div class=" input-group px-2">
+            <i> <img src="/images/kirmizi.png" alt=""></i>
+            <input data-tag="text" class=" form-control form-control-lg" type="text" value="False" readonly
+              style="background-color: #eb1c1c; color: white; font-weight: 500; border: none;">
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <!-- OLD STUFF -->
+    <!-- OLD STUFF -->
+
+
+    <div class="container">
+      <div id="stats">
+        <h4 id="nameText">Name:</h4>
+        <h4 id="scoreText">Score:</h4>
+        <h4 id="rankText"></h4>
+      </div>
+    </div>
     <%- include('../partials/footer') %>
 
-    <script>
-      var socket = io();
-      var playerAnswered = false;
-      var correct = false;
-      var name;
-      var score = 0;
-    
-      var urlParams = new URLSearchParams(window.location.search);
-    
-      const params = {
-        id: urlParams.get("id"),
-      };
-      console.log(params)
-    
-      socket.on("connect", function () {
-        //Tell server that it is host connection from game view
-        socket.emit("player-join-game", params);
-    
-        document.getElementById("answer1").style.visibility = "visible";
-        document.getElementById("answer2").style.visibility = "visible";
-        document.getElementById("answer3").style.visibility = "visible";
-        document.getElementById("answer4").style.visibility = "visible";
-      });
-    
-      // socket.on("noGameFound", function () {
-      //   window.location.href = "../../"; //Redirect user to 'join game' page
-      // });
-    
-      function answerSubmitted(num) {
-        if (playerAnswered == false) {
-          playerAnswered = true;
-    
-          socket.emit("playerAnswer", num); //Sends player answer to server
-    
-          //Hiding buttons from user
-          document.getElementById("answer1").style.visibility = "hidden";
-          document.getElementById("answer2").style.visibility = "hidden";
-          document.getElementById("answer3").style.visibility = "hidden";
-          document.getElementById("answer4").style.visibility = "hidden";
-          document.getElementById("message").style.display = "block";
-          document.getElementById("message").innerHTML =
-            "Answer Submitted! Waiting on other players...";
-        }
-      }
-    
-      //Get results on last question
-      socket.on("answerResult", function (data) {
-        
-        console.log("asnwer",data)
-        if (data == true) {
-          correct = true;
-        }
-      });
-    
-      socket.on("questionOver", function (data) {
-        console.log("questionOver",data)
-        if (correct == true) {
-          document.body.style.backgroundColor = "#4CAF50";
-          document.getElementById("message").style.display = "block";
-          document.getElementById("message").innerHTML = "Correct!";
-        } else {
-          document.body.style.backgroundColor = "#f94a1e";
-          document.getElementById("message").style.display = "block";
-          document.getElementById("message").innerHTML = "Incorrect!";
-        }
-        document.getElementById("answer1").style.visibility = "hidden";
-        document.getElementById("answer2").style.visibility = "hidden";
-        document.getElementById("answer3").style.visibility = "hidden";
-        document.getElementById("answer4").style.visibility = "hidden";
-        socket.emit("getScore");
-      });
-    
-      socket.on("newScore", function (data) {
-        document.getElementById("scoreText").innerHTML = "Score: " + data;
-      });
-    
-      socket.on("nextQuestionPlayer", function () {
-        correct = false;
-        playerAnswered = false;
-    
-        document.getElementById("answer1").style.visibility = "visible";
-        document.getElementById("answer2").style.visibility = "visible";
-        document.getElementById("answer3").style.visibility = "visible";
-        document.getElementById("answer4").style.visibility = "visible";
-        document.getElementById("message").style.display = "none";
-        document.body.style.backgroundColor = "white";
-      });
-    
-      socket.on("hostDisconnect", function () {
-        window.location.href = "../../";
-      });
-    
-      socket.on("playerGameData", function (data) {
-        for (var i = 0; i < data.length; i++) {
-          if (data[i].playerId == socket.io.engine.id) {
-            document.getElementById("nameText").innerHTML = "Name: " + data[i].name;
-            document.getElementById("scoreText").innerHTML =
-              "Score: " + data[i].gameData.score;
+      <script>
+        var socket = io();
+        var playerAnswered = false;
+        var correct = false;
+        var name;
+        var score = 0;
+
+        var urlParams = new URLSearchParams(window.location.search);
+
+        const params = {
+          id: urlParams.get("id"),
+        };
+        console.log(params)
+
+        socket.on("connect", function () {
+          //Tell server that it is host connection from game view
+          socket.emit("player-join-game", params);
+          document.getElementById("ansContainer").style.visibility ="visible";
+          // document.getElementById("answer1").style.visibility = "visible";
+          // document.getElementById("answer2").style.visibility = "visible";
+          // document.getElementById("answer3").style.visibility = "visible";
+          // document.getElementById("answer4").style.visibility = "visible";
+        });
+
+        // socket.on("noGameFound", function () {
+        //   window.location.href = "../../"; //Redirect user to 'join game' page
+        // });
+
+        function answerSubmitted(num) {
+          if (playerAnswered == false) {
+            playerAnswered = true;
+
+            socket.emit("playerAnswer", num); //Sends player answer to server
+
+            //Hiding buttons from user
+            document.getElementById("ansContainer").style.visibility = "hidden";
+            // document.getElementById("answer2").style.visibility = "hidden";
+            // document.getElementById("answer3").style.visibility = "hidden";
+            // document.getElementById("answer4").style.visibility = "hidden";
+            document.getElementById("message").style.display = "block";
+            document.getElementById("message").innerHTML =
+              "Answer Submitted! Waiting on other players...";
           }
         }
-      });
-    
-      socket.on("GameOver", function () {
-        document.body.style.backgroundColor = "#FFFFFF";
-        document.getElementById("answer1").style.visibility = "hidden";
-        document.getElementById("answer2").style.visibility = "hidden";
-        document.getElementById("answer3").style.visibility = "hidden";
-        document.getElementById("answer4").style.visibility = "hidden";
-        document.getElementById("message").style.display = "block";
-        document.getElementById("message").innerHTML = "GAME OVER";
-      });
-    </script>
+
+        //Get results on last question
+        socket.on("answerResult", function (data) {
+
+          console.log("asnwer", data)
+          if (data == true) {
+            correct = true;
+          }
+        });
+
+        socket.on("questionOver", function (data) {
+          console.log("questionOver", data)
+          if (correct == true) {
+            document.body.style.backgroundColor = "#4CAF50";
+            document.getElementById("message").style.display = "block";
+            document.getElementById("message").innerHTML = "Correct!";
+          } else {
+            document.body.style.backgroundColor = "#f94a1e";
+            document.getElementById("message").style.display = "block";
+            document.getElementById("message").innerHTML = "Incorrect!";
+          }
+          document.getElementById("ansContainer").style.visibility = "hidden";
+          // document.getElementById("answer2").style.visibility = "hidden";
+          // document.getElementById("answer3").style.visibility = "hidden";
+          // document.getElementById("answer4").style.visibility = "hidden";
+          socket.emit("getScore");
+        });
+
+        socket.on("newScore", function (data) {
+          document.getElementById("scoreText").innerHTML = "Score: " + data;
+        });
+
+        socket.on("nextQuestionPlayer", function () {
+          correct = false;
+          playerAnswered = false;
+          document.getElementById("ansContainer").style.visibility = "visible";
+          // document.getElementById("answer1").style.visibility = "visible";
+          // document.getElementById("answer2").style.visibility = "visible";
+          // document.getElementById("answer3").style.visibility = "visible";
+          // document.getElementById("answer4").style.visibility = "visible";
+          document.getElementById("message").style.display = "none";
+          document.body.style.backgroundColor = "white";
+        });
+
+        socket.on("hostDisconnect", function () {
+          window.location.href = "../../";
+        });
+
+        socket.on("playerValues", function (data) {
+          console.log(data)
+          for (var i = 0; i < data.length; i++) {
+            if (data[i].playerId == socket.io.engine.id) {
+              document.getElementById("nameText").innerHTML = "Name: " + data[i].name;
+              document.getElementById("scoreText").innerHTML =
+                "Score: " + data[i].values.score;
+            }
+          }
+        });
+
+        socket.on("GameOver", function () {
+          console.log("gameover")
+          document.body.style.backgroundColor = "#FFFFFF";
+          // document.getElementById("answer1").style.visibility = "hidden";
+          // document.getElementById("answer2").style.visibility = "hidden";
+          // document.getElementById("answer3").style.visibility = "hidden";
+          // document.getElementById("answer4").style.visibility = "hidden";
+          document.getElementById("ansContainer").style.visibility = "hidden";
+          document.getElementById("message").style.display = "block";
+          document.getElementById("message").innerHTML = "GAME OVER";
+        });
+      </script>
 
   </body>
+
 </html>
