--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -7,7 +7,7 @@
     <div class="container-fluid">
       <div>
         <img class="img-thumbnail" src="/images/logo.png" style="height: 2.70rem;" id="logo">
-        <!-- settings button -->
+        <!-- compose button -->
       </div>
       <a href="/compose" class="cbtn btn btn-primary bg-primary bg-gradient border rounded shadow  px-2  "
         type="button">
