--- a/views/host/podium.ejs
+++ b/views/host/podium.ejs
@@ -322,17 +322,33 @@
 
 
             <script>
-                var socket = io();
+               var socket = io();
+                const urlParams = new URLSearchParams(window.location.search);
+
+                const params = {
+                    id: urlParams.get("id"),
+
+                }
+
+                var timer;
+
+                var time;
+                console.log(params)
+
+                //When host connects to server
                 socket.on('connect', function () {
 
                     //Tell server that it is host connection from game view
-                    socket.emit('podium');
+                    socket.emit('host-join-game', params);
+                    socket.emit("podium")
                 });
-                socket.on('podiumtake', function (data) {
+
+                    socket.on('podiumtake', function (data) {
                     console.log(data)
                     $('.podium-block-gold .name').text(data[0].name)
 
                 });
+      
 
 
                 setTimeout(() => tsParticles.load("tsparticles", {
