--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -208,8 +208,8 @@
           <option value="7" id="4m">4 minutes</option> 
         </select>
       </div>
-       <div class="dropzone-container col-6 col-lg-6 offset-1 offset-lg-1 ">
-        <div id="" class="dropzone border-success border-1 dz-clickable" data-tag="imgURL">  
+       <div class="dropzone-container col-6 col-lg-6 offset-1 offset-lg-1 "> 
+        <div id="" class="dropzone border-success border-1 dz-clickable" src='/images/540x360.png' data-tag="imgURL">  
          </div>
      </div>
  
@@ -314,11 +314,12 @@
     Dropzone.prototype.defaultOptions.addRemoveLinks = true;
     Dropzone.prototype.defaultOptions.dictDefaultMessage = 'Drop files or click here to upload';
     Dropzone.prototype.defaultOptions.paramName = 'file';
+    Dropzone.prototype.defaultOptions.maxFilesize = 2;
     Dropzone.prototype.defaultOptions.url = '/upload';
-    Dropzone.prototype.defaultOptions.resizeWidth = 540;
-    Dropzone.prototype.defaultOptions.thumbnailMethod= "contain";
-    Dropzone.prototype.defaultOptions.thumbnailHeight = 240;
-    Dropzone.prototype.defaultOptions.thumbnailWidth = 360;
+    Dropzone.prototype.defaultOptions.resizeHeight = 240;
+    Dropzone.prototype.defaultOptions.thumbnailMethod= 'crop';
+    // Dropzone.prototype.defaultOptions.thumbnailHeight = 240;
+    Dropzone.prototype.defaultOptions.thumbnailWidth = 300;
     Dropzone.prototype.defaultOptions.acceptedFiles= 'image/jpeg, image/gif, image/png, image/bmp';
     
     <% dataset.rows.forEach(function(question) { %>        
@@ -349,9 +350,10 @@
       <% }); %>
       
       Dropzone.options.myDropzoneCover = {
-        resizeWidth: 180,
-        thumbnailWidth: 80,
-        thumbnailHeight: 80,
+        resizeHeight: 120,
+        thumbnailWidth: 180,
+        thumbnailHeight: 120,
+        thumbnailMethod: 'crop',
         init : function() {
           const mockFile = {
             name: 'FileName',
@@ -373,8 +375,8 @@
       }
     };
     
+    // Dropzone.autoDiscover = false;
     $(document).ready(function () {
-      Dropzone.autoDiscover = false;
       const uuid = () => ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g,c =>(c^(window.crypto||window.msCrypto).getRandomValues(new Uint8Array(1))[0]&15>>c/4).toString(16));
       const details = <%-JSON.stringify(dataset.details) %> ;
       const title = <%-JSON.stringify(dataset.details.title) %> ;
@@ -424,12 +426,12 @@
         const newQueNr = $(this).closest('li').data('questionOrder')+1;
         const hrClone = $(this).closest('li').next('hr').clone();
         const clone = $(this).closest('li').clone(true, true);
-
+        // clone.find('[data-tag="imgURL"]').prop('id',`my-dropzone${newQueNr}`);       
         const navClone = $(`#nav${$(this).closest('li').prop('id')}`).clone(true, true);
         $(`#nav${$(this).closest('li').prop('id')}`).after(navClone);
         $(this).closest('li').after(clone).after(hrClone);
         // call reorder nav and reorder questions function
-        updateQuestionOrder()
+       updateQuestionOrder()
       })
 
       // add question
@@ -488,7 +490,7 @@
           $(this).children('ul').find('[data-tag="timeLimitId"]').prop('id', `timeLimitId${index+1}`);
           $(this).children('ul').find('[data-tag="imgURL"]').prop('id', `my-dropzone${index+1}`);
           $(this).children('ul').find('[data-tag="questionTypeId"]').prop('id', `question${index+1}questionTypeId`);
-          $(this).children('ul').find('[data-tag="Answers"]').prop('id', `question${index+1}Answers`);
+          // $(this).children('ul').find('[data-tag="Answers"]').prop('id', `question${index+1}Answers`);
         });
         $('#questions [data-tag="Answers"]').each(function(i) {
           $(this).find('li').prop('id', function(j) {
@@ -519,17 +521,15 @@
         // $('#questions li>ul [data-tag="questionTypeId"]').prop('id', function(index) {
           // return `question${index+1}questionTypeId`
         // });             
-        // $('#questions [data-tag="Answers"]').prop('id', function(index) {
-        //   return `question${index+1}Answers`
-        // });
-
-
+        $('#questions [data-tag="Answers"]').prop('id', function(index) {
+          return `question${index+1}Answers`
+        });
       }
 
       // quiz detail page done button handler
       $('#btn-quiz-done').on('click', {
         details: details
-      }, (event) => {
+      },async (event) => {
         // console.table(event.data.details);
         const newDetails = JSON.parse(JSON.stringify(event.data.details));
         newDetails.title = $('[data-tag="quizTitle"]').val();
@@ -538,7 +538,7 @@
         newDetails.isDraft = $('[data-tag="isDraft"]').prop('checked');
         newDetails.lobbyMusicId = $('[data-tag="lobbyMusicId"]').val();
         newDetails.imgURL = $('div.imgarea [data-dz-thumbnail]').prop('src'); 
-        $.ajax({
+        await $.ajax({
           type: "put",
           dataType: 'json', // Set datatype - affects Accept header
           url: `/save/details`,
@@ -561,7 +561,7 @@
         // refactor with global var like questionCount ??
         const oldCount = event.data.oldCount;
         const newCount = $('[data-question-order]').length-1;
-        console.log('newCount :>> ', newCount);
+        // console.log('newCount :>> ', newCount);
         const willDelete = newCount - oldCount < 0 ? true : false;
         // decide if delete needed else we may add new questions
         if (willDelete) {
@@ -576,7 +576,7 @@
           midObj.text = $(`#question${i}text`).val();
           midObj.questionTypeId = $(`#question${i}questionTypeId`).val();
           midObj.timeLimitId = $(`#timeLimitId${i}`).val();
-          midObj.imgURL = $('div.dropzone [data-dz-thumbnail]').prop('src');  
+          midObj.imgURL = $(`#question${i}>ul.qinfo img`).prop('src');
           midObj.quizId = quizId;  
           midObj.id = questionId;  
           midObj.questionOrder = i;
@@ -606,9 +606,7 @@
             // newQuestions[i - 1].Answers[j - 1] = midAnsObj;
           }
         };
-        if (!detailsSaved) {
           $('#btn-quiz-done').click();
-        }
         console.log('questionsToDelete :>> ', questionsToDelete);
           $.ajax({
             type: "put",
