--- a/views/player/ingame.ejs
+++ b/views/player/ingame.ejs
@@ -42,7 +42,7 @@
 
       //When the host clicks start game, the player screen changes
       socket.on('gameStartedPlayer', function (data) {
-        window.location.href = '/playergameblock' + '?id=' + socket.io.engine.id+'&count='+data.count;
+        window.location.href = '/playergameblock' + '?id=' + socket.io.engine.id+'&count='+data;
       });
     </script>
   </body>
