--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -34,8 +34,8 @@
             <div>
               <span class="pheader">PLAYERS</span>
               <ul id="playersJoined" class="row" type="none">
-                <li><span class="badge badge-light py-3 px-3" data-tag="nickName">PLAYER1</span></li>
-                <li><span class="badge badge-light py-3 px-3" data-tag="nickName">PLAYER2</span></li>
+<%#               <!--  <li><span class="badge badge-light py-3 px-3" data-tag="nickName">PLAYER1</span></li>
+                <li><span class="badge badge-light py-3 px-3" data-tag="nickName">PLAYER2</span></li> -->  %>
               </ul>
             </div>
           </div>
