--- a/views/partials/questioncard.ejs
+++ b/views/partials/questioncard.ejs
@@ -156,8 +156,8 @@
   
    <div class="btngroup ">
  
-     <button class="btn btn-success" type="button" style="margin-top: 10px;" data-tag="clone"> <span
-         style="font-weight:bold">Clone Question</span></button>
+     <%#   <!-- <button class="btn btn-success" type="button" style="margin-top: 10px;" data-tag="clone"> <span
+          style="font-weight:bold">Clone Question</span></button> --> %>
  
      <button class="btn btn-primary" type="button" style="margin-top: 10px;" data-tag="addquestion"> <span
          style="font-weight:bold">Add Question </span></button>
