--- a/views/player/index.ejs
+++ b/views/player/index.ejs
@@ -3,11 +3,11 @@
     <h1 id="title">Join a Game</h1>
     <form action="#">
       <div class="form-field">
-        <label id="label">Game Pin</label>
+        <label id="label" style="color: black;">Game Pin</label>
         <input id="pin" type="number" name="pin" autofocus />
       </div>
       <div class="form-field">
-        <label id="label">Nick Name</label>
+        <label id="label"style="color: black;">Nick Name</label>
         <input id="name" type="text" name="name"  />
       </div>
       <br />
