undefined error on score

--- a/views/player/playergameblock.ejs
+++ b/views/player/playergameblock.ejs
@@ -314,7 +314,7 @@
               document.getElementById("nameText").innerHTML =
                 "Name: " + data[i].name;
               document.getElementById("scoreText").innerHTML =
-                "Score: " + data[i].values.score;
+                "Score: " + data[i].values.questionScore;
             }
           }
         });
